fix(display): fixed date alignment with experiences and formations

--- a/src/components/Main/FormationsExperiences.css
+++ b/src/components/Main/FormationsExperiences.css
@@ -2,19 +2,25 @@
 .grid__item p {
   margin-bottom: var(--spacing-1);
 }
+
 .grid__date {
   font-weight: 500;
+  margin-top: 8px;
 }
+
 .grid__title {
   margin-bottom: 0;
 }
+
 .grid__location {
   font-weight: 300;
   color: var(--date-color);
 }
+
 .dark .grid__location {
   color: var(--dark-date-color);
 }
+
 .grid__mission {
   margin-bottom: var(--spacing-1);
 }
